--- a/src/components/custom-elements/form-select/_main.scss
+++ b/src/components/custom-elements/form-select/_main.scss
@@ -7,11 +7,11 @@
 // Form Select
 //
 
-.fc-form__select {
+.fc-form-select {
   display: flex;
   flex-direction: column;
 }
-.fc-form__select select {
+.fc-form-select select {
   display: block;
   width: 100%;
   max-width: 100%;
