--- a/src/components/custom-elements/form-textarea/_main.scss
+++ b/src/components/custom-elements/form-textarea/_main.scss
@@ -7,7 +7,7 @@
 // Form Textarea
 //
 
-.fc-form__textarea textarea {
+.fc-form-textarea textarea {
   display: block;
   width: 100%;
   height: auto;
