--- a/src/components/html/form-label/_mixins.scss
+++ b/src/components/html/form-label/_mixins.scss
@@ -1,25 +1,25 @@
 @mixin form-label {
-  .fc-form__label {
+  .fc-form-label {
     display: inline-block;
     margin-bottom: var(--spacing-02);
     font-weight: 600;
   }
-  .fc-form__label.fc-form__label--block {
+  .fc-form-label.fc-form-label--block {
     display: block;
   }
-  .fc-form__label.fc-form__label--required::after {
+  .fc-form-label.fc-form-label--required::after {
     content: "*";
     color: var(--state-required);
     margin-left: var(--spacing-02);
   }
-  .fc-form__input--reverse .fc-form__label {
+  .fc-input-inline-wrapper .fc-form-label {
     margin-bottom: 0;
     margin-left: var(--spacing-03);
   }
   label[for] {
     cursor: pointer;
   }
-  .fc-form__label:empty {
+  .fc-form-label:empty {
     display: none;
   }
 }
