--- a/src/components/html/form-help-text/_mixins.scss
+++ b/src/components/html/form-help-text/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin form-help-text {
   .fc-form-help-text {
     margin-top: var(--spacing-01);
-    font-size: var(--text-01);
+    font-size: 88%;
     font-weight: 400;
   }
 }
