fix: fieldset padding var value

--- a/src/components/html/form-fieldset/_main.scss
+++ b/src/components/html/form-fieldset/_main.scss
@@ -4,6 +4,7 @@
 @use 'variables' as fieldset;
 
 .fc-fieldset {
+  margin: fieldset.$margin;
   border: fieldset.$border;
   padding: fieldset.$padding;
 
