--- a/src/components/html/form-fieldset/_variables.scss
+++ b/src/components/html/form-fieldset/_variables.scss
@@ -2,4 +2,5 @@
 // ----------------------
 
 $border:        none !default;
-$padding:       none !default;
+$padding:       0 !default;
+$margin:        0 !default;
