--- a/src/components/html/accordion/_variables.scss
+++ b/src/components/html/accordion/_variables.scss
@@ -1,16 +1,20 @@
 // Accordion variables
 // -------------------
 
+@use '../../../../node_modules/@ficusjs/styles/src/scss/spacing';
+@use '../../../../node_modules/@ficusjs/styles/src/scss/colors';
+@use '../../../../node_modules/@ficusjs/styles/src/scss/ui-elements';
+
 // Details
-$details-padding:                  var(--fc-accordion-details-spacing, var(--spacing-05)) !default;
+$details-padding:                  var(--spacing-05, spacing.$spacing-05) !default;
 
 // Summary
-$summary-margin:                   calc(var(--fc-accordion-summary-spacing, var(--spacing-05)) * -1) !default;
-$summary-padding:                  var(--fc-accordion-summary-spacing, var(--spacing-05)) !default;
-$summary-focus-td-color:           var(--fc-accordion-summary-text-decoration-color-focus, var(--secondary-color)) !default;
-$summary-focus-td-thickness:       var(--fc-accordion-summary-text-decoration-thickness-focus, var(--spacing-01)) !default;
-$summary-focus-td-offset:          var(--fc-accordion-summary-text-underline-offset-focus, var(--spacing-02)) !default;
+$summary-margin:                   calc(var(--spacing-05, #{spacing.$spacing-05}) * -1) !default;
+$summary-padding:                  var(--spacing-05, spacing.$spacing-05) !default;
+$summary-focus-td-color:           var(--secondary-color, colors.$secondary) !default;
+$summary-focus-td-thickness:       var(--spacing-01, spacing.$spacing-01) !default;
+$summary-focus-td-offset:          var(--spacing-02, spacing.$spacing-02) !default;
 
 // Toggle icon
-$toggle-icon-size:                 var(--fc-accordion-svg-sizing, var(--icon-02)) !default;
-$toggle-icon-margin:               var(--fc-accordion-svg-spacing, var(--spacing-03)) !default;
+$toggle-icon-size:                 var(--icon-02, ui-elements.$icon-size-02) !default;
+$toggle-icon-margin:               var(--spacing-03, spacing.$spacing-03) !default;
